--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
     <meta name="theme-color" content="#0058ab">
     <title>ИКЕА - официальный интернет-магазин мебели - IKEA</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <script src="js/generateHeader.js" defer></script>
-    <script src="js/generateCatalog.js" defer></script>
-    <script src="js/generateSubCatalog.js" defer></script>
-    <script src="js/generateFooter.js" defer></script>
-    <script src="js/js1.js" defer></script>
-
+    <script src="js/index.js" defer type="module"></script>
 </head>
 <body>
 
@@ -43,10 +38,6 @@
         </aside>
     </div>
 </main>
-
-
-
-
 
 <div class="overlay"></div>
 
