--- a/cart.html
+++ b/cart.html
@@ -12,6 +12,8 @@
 	<meta name="theme-color" content="#0058ab">
 	<title>Корзина - IKEA</title>
 	<link rel="stylesheet" href="styles/styles.css">
+	<script src="js/index.js" defer type="module"></script>
+
 </head>
 <body>
 <main>
