--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
 </main>
 
 <div class="overlay"></div>
+<script>
+    /*let arr = [1,2,3,4,6];
+    let rez = arr.filter((item)=>{
+        if(item >1 && item < 6)
+            return item;
+    });
+    console.log(rez);*/
+</script>
 
 
 </body>
