--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>ИКЕА - официальный интернет-магазин мебели - IKEA</title>
     <link rel="stylesheet" href="styles/styles.css">
     <script src="js/index.js" defer type="module"></script>
+    <script src="js/test.js"></script>
 </head>
 <body>
 
